<resources>
    <string name="app_name">RentMyCar</string>
    <string name="sign_in_account_exists">Already have an account?</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_text">Find the ideal car for your trip.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail Address*</string>
    <string name="password">Password*</string>
    <string name="register_title">Sign up to RentMyCar.</string>
    <string name="start_for_free">START FOR FREE</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="sign_in"><u>Sign in</u>.</string>
    <string name="sign_up"><u>Sign up</u>.</string>
    <string name="login_title">Login to RentMyCar</string>
    <string name="confirm">Confirm Your Account</string>
    <string name="confirmation_token">Confirmation Token</string>
    <string name="already_confirmed">Already confirmed?</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="choose_a_car">Choose a car</string>
    <string name="no_cars_found">No cars found</string>
    <string name="no_cars_available">There are no cars available at the moment.</string>
    <string name="no_car_found">Car not found</string>
    <string name="no_car_available">Car does not exist.</string>
    <string name="settings">Settings</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="cars">Cars</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="car_overview">Car Overview</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_in_to_account">Log in to your account</string>
    <string name="register_account">Register Account</string>
    <string name="my_locations">My locations</string>
    <string name="no_results_found">No results found</string>
    <string name="no_search_query">Please enter a search query</string>
    <string name="search">Search here</string>
    <string name="select_location">Select Location</string>
    <string name="location_overview">Location Overview</string>
    <string name="location_select">Select Location</string>
    <string name="location_details">Location Details</string>
    <string name="car_details">Car Details</string>
    <string name="car_brand_model">%1$s %2$s %3$s</string>
    <string name="car_type_bev">Battery Electric Vehicle</string>
    <string name="car_type_fcev">Fuel Cell Electric Vehicle</string>
    <string name="car_type_ice">Internal Combustion Engine</string>
    <string name="consumption">Consumption:</string>
    <string name="consumption_bev">%.2f%n kWh / 100km</string>
    <string name="consumption_fcev">%.2f%n kg / 100km</string>
    <string name="consumption_ice">%.2f%n L / 100km</string>
    <string name="brand">Brand:</string>
    <string name="brand_type">Type:</string>
    <string name="model">Model:</string>
    <string name="car_price">Starting at €%.2f%n per hour</string>
    <string name="network_call_failed">Couldn\'t reach the server. Please try again.</string>
    <string name="confirmation_token_empty">Please fill in your confirmation token.</string>
    <string name="email_password_incorrect">E-mail address or password incorrect.</string>
    <string name="email_empty">Please fill in your e-mail address.</string>
    <string name="email_incorrect">E-mail address invalid.</string>
    <string name="password_empty">Please fill in your password.</string>
    <string name="password_incorrect">Password needs to have a minimum of 6 characters.</string>
    <string name="name_incorrect">Name needs to have a minimum of 2 characters.</string>
    <string name="no_database_connection">Connection with the database failed.</string>
    <string name="welcome_user">Welcome back to RentMyCar</string>
    <string name="user_welcome_back">Welcome back</string>
    <string name="add_location">Add Location</string>
    <string name="location_list_item">%1$s %2$s, %3$s, %4$s (%5$s)</string>
    <string name="no_locations_found">No locations found</string>
    <string name="no_locations_available">There are currently no locations available</string>
    <string name="location_details_header">%1$s %2$s, %3$s</string>
    <string name="update_location">Update Location</string>
    <string name="address">Address:</string>
    <string name="postal_code">Postalcode:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="address_line">%1$s %2$s</string>
    <string name="delete_location">Delete Location</string>
    <string name="location_deleted">Location successfully deleted</string>
    <string name="view_on_map">View on map</string>
    <string name="location_line">%1$s</string>
    <string name="location">Location</string>
    <string name="user_car_list">My cars</string>
    <string name="user_car_overview">My car overview</string>
    <string name="my_cars">My cars</string>
    <string name="view_car_details">View car details</string>
    <string name="add_car">Register new car</string>
    <string name="car_create">Register your car</string>
    <string name="car_brand">Brand (e.g. Volkswagen)</string>
    <string name="car_brand_type">Type (e.g. Polo)</string>
    <string name="car_model">Model (e.g. EX-L)</string>
    <string name="car_license_plate">License Plate Number</string>
    <string name="car_type">Car Type</string>
    <string name="car_cost_price">Cost Price</string>
    <string name="car_consumption">Consumption (per 100km)</string>
    <string name="next">Next</string>
    <string name="register_car">Register Your Car</string>
    <string name="loading_app_settings">Loading app settings…</string>
    <string name="logout">Log out</string>
    <string name="unauthorized">E-mail address or password incorrect.</string>
    <string name="logging_in_text">Logging in…</string>
    <string name="registering">Registering…</string>
    <string name="registration_failed">Registering failed. Please try again.</string>
    <string name="dashboard_header_welcome">Hi, John Doe</string>
    <string name="dashboard_header_address1">Addressline 1</string>
    <string name="dashboard_header_address2">Addressline 2</string>
    <string name="dashboard_header_address3">Addressline 3</string>
    <string name="dashboard_header_phonenumber">+316123456789</string>
    <string name="dashboard_header_email">john.doe@gmail.com</string>
    <string name="fragment_user_dashboard_edit_button">Edit user details</string>
    <string name="car_create_overview">Car Overview</string>
    <string name="create_car_continue">Continue</string>
    <string name="back">Go Back</string>
    <string name="update_car">Edit Car</string>
    <string name="location_linked_to_car">Location cannot be deleted because it still has cars assigned to it.</string>
    <string name="error_update_location">Could not update location. Please try again later.</string>
    <string name="error_post_location">Couldn\'t create location. Please try again later.</string>
    <string name="error_get_location">No location found.</string>
    <string name="error_get_car">Couldn\'t find car.</string>
    <string name="error_post_car">Can\'t create car. Please try again later.</string>
    <string name="error_put_car">Couldn\'t update car. Please try again later.</string>
    <string name="error_get_user">Couldn\'t find user</string>
    <string name="add_resource">Add Photo</string>
    <string name="error_post_rental_plan">Can\'t create rental plan. Please try again later.</string>
    <string name="error_get_rental_plan">No rental plan found.</string>
    <string name="error_delete_rental_plan">Cannot delete rental plan because timeslots have been booked</string>
    <string name="my_rental_plans">Rental plans</string>
    <string name="add_rental_plan">Add Rental Plan</string>
    <string name="rental_plan_list">Rental Plan Overview</string>
    <string name="rental_plan_details">Rental Plan Details</string>
    <string name="rental_plan_create">Create Rental Plan</string>
    <string name="no_rental_plans_found">No rental plans found</string>
    <string name="no_rental_plans_available">No rental plans available</string>
    <string name="no_rental_plan_found">No rental plan found</string>
    <string name="no_rental_plan_available">This rental plan does not exist.</string>
    <string name="end_date">End date:</string>
    <string name="start_date">Start date:</string>
    <string name="car">Car:</string>
    <string name="price">Price (per hour):</string>
    <string name="rental_plan_price">€%.2f%n</string>
    <string name="rental_plan">Rental Plan</string>
    <string name="select_dates">Select Dates</string>
    <string name="available_from">Start date</string>
    <string name="available_until">End date</string>
    <string name="create_rental_plan">Create Rental Plan</string>
    <string name="car_car">Car</string>
    <string name="submit">Submit</string>
    <string name="car_list">%1$d - %2$s %3$s %4$s</string>
    <string name="price_per_hour">Price per hour</string>
    <string name="user_dashboard_title">Hi, %1$s %2$s</string>
    <string name="user_dashboard_address1">%1$s %2$s</string>
    <string name="user_dashboard_address2">%1$s %2$s</string>
    <string name="user_dashboard_address3">%1$s</string>
    <string name="user_dashboard_phone">%1$s</string>
    <string name="user_dashboard_email">%1$s</string>
    <string name="user_dashboard_street_name">%1$s</string>
    <string name="user_dashboard_house_number">%1$s</string>
    <string name="user_dashboard_city">%1$s</string>
    <string name="user_dashboard_postal_code">%1$s</string>
    <string name="user_dashboard_country">%1$s</string>
    <string name="price_value">€%.2f%n</string>
    <string name="dashboard_edit_detail">Dashboard Edit Detail</string>
    <string name="street">Street</string>
    <string name="house_number">House nr.</string>
    <string name="postal_city">Postcode</string>
    <string name="phone_number">Phone number</string>
    <string name="edit_details">Edit details</string>
    <string name="book_now">Book now</string>
    <string name="book_car">Book Car</string>
    <string name="edit_car">Edit car</string>
    <string name="no_timeslots_found">No timeslots found</string>
    <string name="no_timeslots_available">It looks like there are no timeslots available for this car.</string>
    <string name="timeslot_start_end">%1$s - %2$s</string>
    <string name="error_get_availability_page">Can\'t get car availability. Please try again later.</string>
    <string name="date_calendar">%1$s</string>
    <string name="make_reservation">Make a reservation</string>
    <string name="select_insurance">Select your insurance</string>
    <string name="price_insurance">Price:</string>
    <string name="description_insurance">Description:</string>
    <string name="title_all_risk">All risk insurance</string>
    <string name="description_all_risk">Always insured with damage without excess, even if you cause it yourself.</string>
    <string name="title_all_risk_international">All risk insurance international</string>
    <string name="description_basic_coverage">"Basic insurance in case of theft, damage or breakdown. €300,- excess."</string>
    <string name="description_all_risk_international">Always insured with damage without excess, even if you cause it yourself. Also internationally.</string>
    <string name="title_basic_coverage">Basic insurance</string>
    <string name="title_basic_coverage_international">Basic insurance international</string>
    <string name="description_basic_coverage_international">Basic insurance in case of theft, damage or breakdown, also internationally. €300,- excess.</string>
</resources>