<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/rent_a_car">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/carListFragment"
                    android:title="@string/cars"
                    android:icon="@drawable/ic_baseline_car_rental_24"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/userDashboardFragment"
                    android:title="@string/user_dashboard"
                    android:icon="@drawable/ic_baseline_person_24"/>
            </group>
        </menu>
    </item>
</menu>