<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavGraphActivity">

    <ImageView
        android:id="@+id/background_red_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_background_car"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/horizontal_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/background_red_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvAccountExists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/sign_in_account_exists"
            android:textColor="@color/white_smoke"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/background_red_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/sign_in"
            android:textColor="@color/hyperlink"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/background_red_car"
            app:layout_constraintStart_toEndOf="@+id/tvAccountExists"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="2dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableEnd="@drawable/ic_baseline_play_circle_filled_24"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/get_started"
        android:textAlignment="textStart"
        android:textColor="@color/white_smoke"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/button_blue"/>

    <TextView
        android:id="@+id/welcome_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@color/white_smoke"
        android:textAlignment="textEnd"
        android:paddingTop="40dp"
        android:paddingStart="40dp"
        android:paddingEnd="18dp"
        android:textSize="46sp"
        android:shadowColor="@color/black"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>